not sure I want all those fucking defaults

--- a/index.html
+++ b/index.html
@@ -8,28 +8,52 @@
     <meta name="description" content="Data Engineering Daily is a technology news website operating since 2016,
     focusing primarily on covering data-related technology and Open Source tools.">
     <meta name="author" content="Hadar Sharon">
-    <meta name="keywords" content="Data, Engineering, Data Engineering, Open Source, Technology, Programming, News, Events, Updates">
+    <meta name="keywords"
+          content="Data, Engineering, Data Engineering, Open Source, Technology, Programming, News, Events, Updates">
     <meta name="robots" content="noindex,nofollow">
     <title>Data Engineering Daily</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-<!-- TOP SECTION OF THE PAGE - NAVIGATION BEER, RSS FEED, SUBSCRIPTION ETC. -->
-<div id="top-section">
-    <img id="data-engineering-daily-logo" src="img/logo.png" alt="The Data Engineering Daily Website Logo">
-    <nav>
-        <!--<a href="/">Home</a>-->
-        <a href="about.html">About</a>
-        <a href="news.html">News</a>
-        <a href="events.html">Events</a>
-        <a href="guides.html">Guides & Tutorials</a>
-    </nav>
-    <div>
-        <button>Subscribe to our daily digest!</button>
+<!-- TOP SECTION OF THE HOME PAGE - LOGO, TITLE, NAVIGATION BAR, RSS FEED, SUBSCRIPTION... -->
+<div class="container">
+    <div id="top-section">
+        <div id="nav-section">
+            <div class="row">
+                <div class="col-sm-3">
+                    <a href="">
+                        <img id="data-engineering-daily-logo" src="img/logo.png"
+                             alt="The Data Engineering Daily Website Logo">
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <nav>
+                        <a href="about.html">About</a>
+                        <a href="news.html">News</a>
+                        <a href="events.html">Events</a>
+                        <a href="guides.html">Guides & Tutorials</a>
+                    </nav>
+                </div>
+                <div class="col-sm-3">
+                    <button>Subscribe to our daily digest!</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <p>Welcome to Data Engineering Daily - Your #1 source for everything Data Engineering, Open Source and more!</p>
