--- a/index.html
+++ b/index.html
@@ -18,40 +18,54 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous"></script>
 </head>
 
 <body>
 <!-- TOP SECTION OF THE HOME PAGE - LOGO, TITLE, NAVIGATION BAR, RSS FEED, SUBSCRIPTION... -->
-<div class="container">
-    <div id="top-section">
-        <div id="nav-section">
-            <div class="row">
-                <div class="col-sm-3">
-                    <a href="">
-                        <img id="data-engineering-daily-logo" src="img/logo.png"
-                             alt="The Data Engineering Daily Website Logo">
-                    </a>
+<div class="container-fluid no-padding">
+    <div class="row top-section">
+        <!-- Data Engineering Daily Logo Box -->
+        <div class="col-3">
+            <a href="">
+                <img id="data-engineering-daily-logo" src="img/logo.png"
+                     alt="The Data Engineering Daily Website Logo">
+            </a>
+        </div>
+        <!-- Navigation Bar -->
+        <div class="col-6">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="row">
+                    <div class="col nav-button-div">
+                        <a class="nav-link nav-button" href="about.html"><span>About </span></a>
+                    </div>
+                    <div class="col nav-button-div">
+                        <a class="nav-link nav-button" href="news.html"><span>News </span></a>
+                    </div>
+                    <div class="col nav-button-div">
+                        <a class="nav-link nav-button" href="events.html"><span>Events </span></a>
+                    </div>
+                    <div class="col nav-button-div">
+                        <a class="nav-link nav-button" href="guides.html"><span>Guides & Tutorials </span></a>
+                    </div>
                 </div>
-                <div class="col-sm-6">
-                    <nav>
-                        <a href="about.html">About</a>
-                        <a href="news.html">News</a>
-                        <a href="events.html">Events</a>
-                        <a href="guides.html">Guides & Tutorials</a>
-                    </nav>
-                </div>
-                <div class="col-sm-3">
-                    <button>Subscribe to our daily digest!</button>
-                </div>
+            </nav>
+        </div>
+        <!-- Subscription, Time and Search -->
+        <div class="col-3">
+            <button>Subscribe to our daily digest!</button>
+            <div class="current-date-and-time">
+                <span id="current-date"></span>
+                <span id="current-time"></span>
+                <script defer>
+                    document.getElementById("current-date").innerHTML = new Date().toLocaleDateString();
+                    document.getElementById("current-time").innerHTML = new Date().toLocaleTimeString();
+                </script>
             </div>
         </div>
     </div>
