--- a/index.html
+++ b/index.html
@@ -17,14 +17,9 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <!-- Load BOOTSTRAP CSS & JS (including jQuery) from CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Load handlebars from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 </head>
@@ -32,15 +27,9 @@
 <body>
 
 <div id="top-placeholder">
-<!-- Placeholder div to be populated with HTML from top.html
-(top of the page i.e. navigation bar and extras, is the same for all pages, therefore no reason to copy & paste it) -->
+    <!-- Placeholder div to be populated with HTML from top.html
+    (top of the page i.e. navigation bar and extras, is the same for all pages, therefore no reason to copy & paste it) -->
 </div>
-
-<script>
-$(function(){
-  $("#top-placeholder").load("top.html");
-});
-</script>
 
 <div class="container-fluid no-padding">
     <div class="row">
@@ -58,11 +47,15 @@ $(function(){
             </h2>
         </div>
     </div>
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
 </div>
-
+<script>
+    $(function () {
+        $("#top-placeholder").load("top.html");
+    });
+</script>
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
