--- a/top.html
+++ b/top.html
@@ -3,7 +3,7 @@
     <div class="row top-section">
         <!-- Data Engineering Daily Logo Box -->
         <div class="col-3">
-            <a href="">
+            <a href="index.html">
                 <img id="data-engineering-daily-logo" src="img/logo.png"
                      alt="The Data Engineering Daily Website Logo">
             </a>
