--- a/about.html
+++ b/about.html
@@ -30,36 +30,48 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-10">
-            <h1>Background</h1>
-            <p>
-                Data Engineering Daily, operating since 2016, is a primarily data-oriented technology news website,
-                founded with the goal of being the leading source for Data-related news, as well as providing guides,
-                tutorials and other supplementary orientation material for aspiring & experienced Data Engineers alike.
-                <br>
-                Since the site's inception, we have been active in promoting and covering numerous Data Engineering
-                and/or Open Source related conferences - namely:&nbsp;
-                <a href="http://ieee-icde.org/">The IEEE International Conference on Data Engineering (ICDE)</a>,&nbsp;
-                <a href="https://events.linuxfoundation.org/open-source-summit-europe/">Open Source Summit</a> (formerly
-                known as LinuxCon), and&nbsp;<a href="https://www.devconf.info/">DevConf</a>, among others.
-                <br>
-                Perhaps more importantly - site readers are also encouraged to apply their knowledge and contribute to
-                Open Source Data-related projects!&nbsp;
-                <br>
-                Some well-known examples of aforementioned projects include:&nbsp;
-                <a href="https://airflow.apache.org/">Apache Airflow</a>,&nbsp;
-                <a href="https://greatexpectations.io/">Great Expectations</a> and&nbsp;
-                <a href="https://julialang.org/">the Julia Programming Language</a>).
-                <br>
-                <strong>
-                    (One could get acquainted, at his/her discretion, with such technologies & tools by exploring
-                    our Guides & Tutorials section
-                </strong>
-            </p>
+        <div class="col-8 offset-2">
+            <div>
+                <div style="text-align: center;"><h1>Background</h1></div>
+                <hr>
+                <p>
+                    Data Engineering Daily, operating since 2016, is a primarily data-oriented technology news website,
+                    founded with the goal of being the leading source for Data-related news, as well as providing
+                    guides, tutorials and other supplementary orientation material for aspiring & experienced
+                    Data Engineers alike.
+                    <br>
+                    Since the site's inception, we have been active in promoting and covering numerous Data Engineering
+                    and/or Open Source related conferences - namely:&nbsp;
+                    <a href="http://ieee-icde.org/">The IEEE International Conference on Data Engineering (ICDE)</a>,&nbsp;
+                    <a href="https://events.linuxfoundation.org/open-source-summit-europe/">Open Source Summit</a>
+                    (formerly known as LinuxCon), and&nbsp;<a href="https://www.devconf.info/">DevConf</a>, among others.
+                    <br>
+                    Perhaps more importantly - site readers are also encouraged to apply their knowledge and contribute
+                    to Open Source Data-related projects!&nbsp;
+                    <br>
+                    Some well-known examples of aforementioned projects include:&nbsp;
+                    <a href="https://airflow.apache.org/">Apache Airflow</a>,&nbsp;
+                    <a href="https://greatexpectations.io/">Great Expectations</a> and&nbsp;
+                    <a href="https://julialang.org/">the Julia Programming Language</a>).
+                    <br>
+                    <strong>
+                        (One could get acquainted, at his/her discretion, with such technologies & tools by exploring
+                        our Guides & Tutorials section)
+                    </strong>
+                </p>
+            </div>
         </div>
     </div>
-    <h1>Awards & Acclaims</h1>
-    <h1>Get in touch with us</h1>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div style="text-align: center;"><h1>Awards & Acclaims</h1></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div style="text-align: center;"><h1>Get in touch with us</h1></div>
+        </div>
+    </div>
 </div>
 <script>
     $(function () {
