--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/about.css">
     <!-- Load BOOTSTRAP CSS & JS (including jQuery) from CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -31,33 +32,47 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-8 offset-2">
-            <div>
+            <div class="info-box">
                 <div style="text-align: center;"><h1>Background</h1></div>
                 <hr>
                 <p>
-                    Data Engineering Daily, operating since 2016, is a primarily data-oriented technology news website,
-                    founded with the goal of being the leading source for Data-related news, as well as providing
-                    guides, tutorials and other supplementary orientation material for aspiring & experienced
-                    Data Engineers alike.
-                    <br>
+                    <b><i>Data Engineering Daily</i></b>, operating since 2016, is a primarily data-oriented technology
+                    news website,
+                    <wbr>
+                    founded with the goal of being the leading source for Data-related news,
+                    <wbr>
+                    as well as providing guides, tutorials and other supplementary orientation material for aspiring &
+                    experienced Data Engineers alike.
+                </p>
+                <p>
                     Since the site's inception, we have been active in promoting and covering numerous Data Engineering
-                    and/or Open Source related conferences - namely:&nbsp;
+                    and/or Open Source related conferences - namely:&nbsp;<wbr>
                     <a href="http://ieee-icde.org/">The IEEE International Conference on Data Engineering (ICDE)</a>,&nbsp;
                     <a href="https://events.linuxfoundation.org/open-source-summit-europe/">Open Source Summit</a>
-                    (formerly known as LinuxCon), and&nbsp;<a href="https://www.devconf.info/">DevConf</a>, among others.
-                    <br>
+                    (formerly known as LinuxCon), and&nbsp;<a href="https://www.devconf.info/">DevConf</a>, among
+                    others.
+                </p>
+                <p>
                     Perhaps more importantly - site readers are also encouraged to apply their knowledge and contribute
-                    to Open Source Data-related projects!&nbsp;
-                    <br>
-                    Some well-known examples of aforementioned projects include:&nbsp;
-                    <a href="https://airflow.apache.org/">Apache Airflow</a>,&nbsp;
-                    <a href="https://greatexpectations.io/">Great Expectations</a> and&nbsp;
+                    to Open Source
+                    <wbr>
+                    Data-related projects!&nbsp;
+                </p>
+                <p>
+                    Some well-known examples of aforementioned projects include:&nbsp;<wbr>
+                    <a href="https://airflow.apache.org/">Apache Airflow</a>,&nbsp;<wbr>
+                    <a href="https://greatexpectations.io/">Great Expectations</a> and&nbsp;<wbr>
                     <a href="https://julialang.org/">the Julia Programming Language</a>).
-                    <br>
-                    <strong>
-                        (One could get acquainted, at his/her discretion, with such technologies & tools by exploring
-                        our Guides & Tutorials section)
-                    </strong>
+                </p>
+                <p>
+                <ul>
+                    <li>
+                        <strong>
+                            (One could get acquainted at his/her discretion with such technologies by exploring our
+                            Guides & Tutorials section)
+                        </strong>
+                    </li>
+                </ul>
                 </p>
             </div>
         </div>
