--- a/about.html
+++ b/about.html
@@ -59,32 +59,114 @@
                     Data-related projects!&nbsp;
                 </p>
                 <p>
-                    Some well-known examples of aforementioned projects include:&nbsp;<wbr>
-                    <a href="https://airflow.apache.org/">Apache Airflow</a>,&nbsp;<wbr>
-                    <a href="https://greatexpectations.io/">Great Expectations</a> and&nbsp;<wbr>
-                    <a href="https://julialang.org/">the Julia Programming Language</a>).
-                </p>
-                <p>
+                    Some well-known examples of aforementioned projects include:&nbsp;
                 <ul>
                     <li>
-                        <strong>
-                            (One could get acquainted at his/her discretion with such technologies by exploring our
-                            Guides & Tutorials section)
-                        </strong>
+                        <a href="https://airflow.apache.org/">Apache Airflow</a>
+                    </li>
+                    <li>
+                        <a href="https://greatexpectations.io/">Great Expectations</a>
+                    </li>
+                    <li>
+                        <a href="https://julialang.org/">the Julia Programming Language</a>
                     </li>
                 </ul>
+                </p>
+                <p>
+                    <strong>
+                        (One could get acquainted at his/her discretion with such technologies by exploring our
+                        <wbr>
+                        Guides & Tutorials section)
+                    </strong>
                 </p>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-8 offset-2">
-            <div style="text-align: center;"><h1>Awards & Acclaims</h1></div>
+            <div class="info-box">
+                <div style="text-align: center;"><h1>Awards & Acclaims</h1></div>
+                <hr>
+                <img class="award" src="img/awards/award1.png" alt="Winner of the 2019 Event Technology Award">
+                <img class="award" src="img/awards/award2.jpg" alt="Winner of the 2019 4D Big Data Award">
+                <img class="award" src="img/awards/award3.jpg" alt="Winner of the 2019 Technology Excellence Awards">
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-8 offset-2">
-            <div style="text-align: center;"><h1>Get in touch with us</h1></div>
+            <div class="info-box">
+                <div style="text-align: center;"><h1>Get in touch with us</h1></div>
+                <section class="mb-4">
+                    <h4>
+                        For any questions
+                    </h4>
+
+                    <div class="row">
+                        <div class="col-md-9 mb-md-0 mb-5">
+                            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="md-form mb-0">
+                                            <input type="text" id="name" name="name" class="form-control">
+                                            <label for="name" class="">Your name</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="md-form mb-0">
+                                            <input type="text" id="email" name="email" class="form-control">
+                                            <label for="email" class="">Your email</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="md-form mb-0">
+                                            <input type="text" id="subject" name="subject" class="form-control">
+                                            <label for="subject" class="">Subject</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-12">
+
+                                        <div class="md-form">
+                                            <textarea type="text" id="message" name="message" rows="2"
+                                                      class="form-control md-textarea"></textarea>
+                                            <label for="message">Your message</label>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </form>
+
+                            <div class="text-center text-md-left">
+                                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                            </div>
+                            <div class="status"></div>
+                        </div>
+
+                        <div class="col-md-3 text-center">
+                            <ul class="list-unstyled mb-0">
+                                <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                                    <p>San Francisco, CA 94126, USA</p>
+                                </li>
+
+                                <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                                    <p>+ 01 234 567 89</p>
+                                </li>
+
+                                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                                    <p>contact@mdbootstrap.com</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
 </div>
