--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <!-- Load BOOTSTRAP CSS & JS (including jQuery) from CDN -->
+    <link rel="stylesheet" href="css/index.css">
+    <!-- Load Font Awesome (for usage of icons & emojis) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Load Bootstrap CSS & JS (including jQuery) from CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -29,6 +32,11 @@
 <div id="top-placeholder">
     <!-- Placeholder div to be populated with HTML from top.html
     (top of the page i.e. navigation bar and extras, is the same for all pages, therefore no reason to copy & paste it) -->
+    <script>
+        $(function () {
+            $("#top-placeholder").load("top.html");
+        });
+    </script>
 </div>
 
 <div class="container-fluid no-padding">
@@ -40,22 +48,77 @@
                 </span>
             </marquee>
         </div>
-        <div class="row">
-            <h2>
-                Welcome to Data Engineering Daily - Your #1 source for everything Data Engineering, Open Source and
-                more!
-            </h2>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <header style="margin-top: 3rem; margin-bottom: 3rem;">
+                <h2 style="text-align: center;">Welcome to Data Engineering Daily</h2>
+                <h4 style="text-align: center;">Your #1 source for everything Data Engineering, Open Source and
+                    more!</h4>
+                <hr>
+            </header>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 offset-2">
+            <div class="top-news-hot-discussions-box">
+                <h5 style="text-align: center;">&#128240;&nbsp;Top News</h5>
+                <hr>
+                <ul>
+                    <li class="top-news">
+                        <span>One</span>
+                    </li>
+                    <li class="top-news">
+                        <span>Two</span>
+                    </li>
+                    <li class="top-news">
+                        <span>Three</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="top-news-hot-discussions-box">
+                <h5 style="text-align: center;">&#128172;&nbsp;Hot Discussions</h5>
+                <hr>
+                <ul>
+                    <li class="hot-discussions">
+                        <span>One</span>
+                    </li>
+                    <li class="hot-discussions">
+                        <span>Two</span>
+                    </li>
+                    <li class="hot-discussions">
+                        <span>Three</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div id="newsbox-homepage" data-component="newsbox">
+                <div role="list">
+                    <div class="newsitem">
+                        <img src="" alt="">
+                    </div>
+                    <div class="newsitem">
+                        <img src="" alt="">
+                    </div>
+                    <div class="newsitem">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<script>
-    $(function () {
-        $("#top-placeholder").load("top.html");
-    });
-</script>
+<footer>
+    <p>Footer</p>
+</footer>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main.js" defer></script>
 </body>
 
 </html>
