--- a/index.html
+++ b/index.html
@@ -100,13 +100,16 @@
             <div id="newsbox-homepage" data-component="newsbox">
                 <div role="list">
                     <div class="newsitem">
-                        <img src="" alt="">
+                        <img src="img/news/airflow-2.jpg" alt="">
                     </div>
                     <div class="newsitem">
-                        <img src="" alt="">
+                        <img src="img/news/julia-pkg-manager.png" alt="">
                     </div>
                     <div class="newsitem">
-                        <img src="" alt="">
+                        <img src="img/news/hadoop-curtain.jpg" alt="">
+                    </div>
+                    <div class="newsitem">
+                        <img src="img/news/apache-spark-3.png" alt="">
                     </div>
                 </div>
             </div>
