--- a/index.html
+++ b/index.html
@@ -97,20 +97,18 @@
     </div>
     <div class="row">
         <div class="col-8 offset-2">
-            <div id="newsbox-homepage" data-component="newsbox">
-                <div role="list">
-                    <div class="newsitem">
-                        <img src="img/news/airflow-2.jpg" alt="">
-                    </div>
-                    <div class="newsitem">
-                        <img src="img/news/julia-pkg-manager.png" alt="">
-                    </div>
-                    <div class="newsitem">
-                        <img src="img/news/hadoop-curtain.jpg" alt="">
-                    </div>
-                    <div class="newsitem">
-                        <img src="img/news/apache-spark-3.png" alt="">
-                    </div>
+            <div id="newsbox-homepage">
+                <div class="newsitem">
+                    <img src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
+                </div>
+                <div class="newsitem">
+                    <img src="img/news/julia-pkg-manager.png" alt="">
+                </div>
+                <div class="newsitem">
+                    <img src="img/news/hadoop-curtain.jpg" alt="">
+                </div>
+                <div class="newsitem">
+                    <img src="img/news/apache-spark-3.png" alt="" height="330px" width="600px">
                 </div>
             </div>
         </div>
@@ -122,6 +120,7 @@
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js" defer></script>
+<script src="js/index.js" defer></script>
 </body>
 
 </html>
