--- a/index.html
+++ b/index.html
@@ -96,20 +96,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-8 offset-2">
+        <div class="col-4 offset-4">
             <div id="newsbox-homepage">
-                <div class="newsitem">
-                    <img src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
-                </div>
-                <div class="newsitem">
-                    <img src="img/news/julia-pkg-manager.png" alt="">
-                </div>
-                <div class="newsitem">
-                    <img src="img/news/hadoop-curtain.jpg" alt="">
-                </div>
-                <div class="newsitem">
-                    <img src="img/news/apache-spark-3.png" alt="" height="330px" width="600px">
-                </div>
+                <img class="newsitem" src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
+                <img class="newsitem" src="img/news/julia-pkg-manager-news.png" alt="" height="330px" width="600px">
+                <img class="newsitem" src="img/news/hadoop-curtain-news.jpg" alt="" height="330px" width="600px">
+                <img class="newsitem" src="img/news/apache-spark-3.png" alt="" height="330px" width="600px">
             </div>
         </div>
     </div>
