Let's try and align everything

--- a/index.html
+++ b/index.html
@@ -96,7 +96,39 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4 offset-4">
+        <div class="col-4 offset-2 d-flex align-items-center justify-content-center">
+            <div>
+                <h1 style="text-align: center; margin-bottom: 1rem;">Apache Airflow <b>2.0</b> is finally here!</h1>
+                <h3 style="text-align: center; margin-top: 1rem;">New Operators, Better Integrations
+                    <wbr>
+                    and many more exciting features introduced...
+                </h3>
+            </div>
+            <div>
+                <h1 style="text-align: center; margin-bottom: 1rem;">Julia has a new <b><i>Pkg</i></b> Manager</h1>
+                <h3 style="text-align: center; margin-top: 1rem;">Meet <b>Pkg</b> - a complete rewrite of
+                    <wbr>
+                    Julia's old package manager,
+                    <wbr>
+                    released together with Julia v1.0
+                </h3>
+            </div>
+            <div>
+                <h1 style="text-align: center; margin-bottom: 1rem;">The state of Hadoop going into 2021</h1>
+                <h3 style="text-align: center; margin-top: 1rem;">Is the curtain closing on Hadoop's relevance
+                    <wbr>
+                    in the Big Data world?
+                </h3>
+            </div>
+            <div>
+                <h1 style="text-align: center; margin-bottom: 1rem;">A Sneak Peek into Apache Spark <b>3.0</b></h1>
+                <h3 style="text-align: center; margin-top: 1rem;">Did Spark finally make the jump
+                    <wbr>
+                    from <i>Great</i> to <b><i>Perfect</i></b>?
+                </h3>
+            </div>
+        </div>
+        <div class="col-4 d-flex align-items-center justify-content-center">
             <div id="newsbox-homepage">
                 <img class="newsitem" src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
                 <img class="newsitem" src="img/news/julia-pkg-manager-news.png" alt="" height="330px" width="600px">
