--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-8 offset-2">
+        <div class="col-10 offset-1">
             <header style="margin-top: 3rem; margin-bottom: 3rem;">
                 <h2 style="text-align: center;">Welcome to Data Engineering Daily</h2>
                 <h4 style="text-align: center;">Your #1 source for everything Data Engineering, Open Source and
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4 offset-2">
+        <div class="col-5 offset-1">
             <div class="top-news-hot-discussions-box">
                 <h5 style="text-align: center;">&#128240;&nbsp;Top News</h5>
                 <hr>
@@ -77,26 +77,38 @@
                 </ul>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-5">
             <div class="top-news-hot-discussions-box">
                 <h5 style="text-align: center;">&#128172;&nbsp;Hot Discussions</h5>
                 <hr>
                 <ul>
                     <li class="hot-discussions">
-                        <span>One</span>
+                        <span class="discussion">
+                            <a>
+                                <b>[Apache Spark]</b> - When to use RDDs vs. DataFrames vs. DataSets
+                            </a>
+                        </span>
                     </li>
                     <li class="hot-discussions">
-                        <span>Two</span>
+                        <span class="discussion">
+                            <a>
+                                <b>[Python]</b> - What are the advantages of asyncio over multiprocessing/multithreading?
+                            </a>
+                        </span>
                     </li>
                     <li class="hot-discussions">
-                        <span>Three</span>
+                        <span class="discussion">
+                            <a>
+                                <b>[Databases - PostgreSQL]</b> - stored procedure vs. external ORM - which is the better choice?
+                            </a>
+                        </span>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-8 offset-2">
+        <div class="col-10 offset-1">
             <div id="newsbox-homepage">
                 <div class="newsitem">
                     <div class="col d-flex align-items-center justify-content-center">
@@ -104,7 +116,9 @@
                             <h1 style="text-align: center; margin-bottom: 1rem;">Apache Airflow <b>2.0</b> is finally
                                 here!
                             </h1>
-                            <h3 style="text-align: center; margin-top: 1rem;">New Operators, Better Integrations
+                            <h3 style="text-align: center; margin-top: 1rem;">New Operators, a fresh UI,
+                                <wbr>
+                                better integrations
                                 <wbr>
                                 and many more exciting features introduced...
                             </h3>
@@ -118,10 +132,10 @@
                 <div class="newsitem">
                     <div class="col d-flex align-items-center justify-content-center">
                         <div>
-                            <h1 style="text-align: center; margin-bottom: 1rem;">Julia has a new <b><i>Pkg</i></b>
+                            <h1 style="text-align: center; margin-bottom: 2rem;">Julia has a new <b><i>Pkg</i></b>
                                 Manager
                             </h1>
-                            <h3 style="text-align: center; margin-top: 1rem;">Meet <b>Pkg</b> - a complete rewrite of
+                            <h3 style="text-align: center; margin-top: 2rem;">Meet <b>Pkg</b> - a complete rewrite of
                                 <wbr>
                                 Julia's old package manager,
                                 <wbr>
@@ -139,10 +153,11 @@
                         <div>
                             <h1 style="text-align: center; margin-bottom: 1rem;">The state of Hadoop going into
                                 2021</h1>
-                            <h3 style="text-align: center; margin-top: 1rem;">Is the curtain closing on Hadoop's
-                                relevance
+                            <h3 style="text-align: center; margin-top: 1rem;">With MapReduce all but diminished,
                                 <wbr>
-                                in the Big Data world?
+                                is the curtain closing on Hadoop's
+                                <wbr>
+                                relevance in the Big Data world?
                             </h3>
                         </div>
                         <div class="vr"></div>
@@ -157,7 +172,9 @@
                             <h1 style="text-align: center; margin-bottom: 1rem;">A Sneak Peek into Apache Spark
                                 <b>3.0</b>
                             </h1>
-                            <h3 style="text-align: center; margin-top: 1rem;">Did Spark finally make the jump
+                            <h3 style="text-align: center; margin-top: 1rem;">After months of anticipation:
+                                <wbr>
+                                Did Spark finally make the jump
                                 <wbr>
                                 from <i>Great</i> to <b><i>Perfect</i></b>?
                             </h3>
