--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-10 offset-1">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IAF8DjrQSSk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_Rnrx2lo9cw"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </div>
+    </div>
 </div>
 <footer>
     <p>Footer</p>
