--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             <h1>Latest News</h1>
         </div>
     </div>
+    <div class="col-10 offset-1">
+        <hr>
+    </div>
     <div class="row">
         <div class="col-10 offset-1">
             <div id="newsbox-homepage">
@@ -197,6 +200,9 @@
         <div class="col-4 offset-4 d-flex align-items-center justify-content-center">
             <h1>Trending Videos</h1>
         </div>
+    </div>
+    <div class="col-10 offset-1">
+        <hr>
     </div>
     <div class="row video-row">
         <div class="col-5 offset-1 d-flex align-items-center justify-content-center">
